# funlab

./: .env.simple  .gitignore  pyproject.toml
Training/: benchmarks.py  detect.py  kk.py  train.py
Training/calculate/: calorie.py
Training/classify/: tutorial.ipynb
Training/data/: data.yaml
Training/models/: common.py
Training/segment/: tutorial.ipynb
Training/utils/: dataloaders.py
Training/utils/loggers/clearml/: README.md
Training/utils/loggers/comet/: hpo.py
Training/utils/segment/: dataloaders.py
funlab/: app.py  default_settings.py
funlab/cmd/: web.py
funlab/models/: __init__.py  courses.py  foodimages.py  oauth2.py  organizations.py  personals.py  users.py
funlab/web/: __init__.py  acl.py
funlab/web/forms/: __init__.py  accounts.py  courses.py  foodimages.py  organizations.py  personals.py
funlab/web/static/: package.json
funlab/web/templates/accounts/: login.html  register.html
funlab/web/templates/base/: base-layout.html  default-page.html  footer.html  html-renderer.html  navbar.html  page.html  toolbar.html
funlab/web/templates/course/: index.html
funlab/web/templates/foodimage/: foodimage-create-edit.html  index.html
funlab/web/templates/foods/: index.html
funlab/web/templates/home/: index.html  show_info.html
funlab/web/templates/personal/: calculator.html  index.html
funlab/web/views/: __init__.py  accounts.py  foodimage.py  foods.py  home.py  organizations.py  package.json  personal.py  sites.py
funlab/web/views/admin/: organizations.py
scripts/: init-admin.py  run-web
(+1 files in other folders)
